NIle-1821 : feature courses and search alignment issue css

--- a/app/styles/components/_collection-results.scss
+++ b/app/styles/components/_collection-results.scss
@@ -127,7 +127,7 @@
 
         .remixed-by {
           span.title {
-            width: 60px;
+            width: 63px;
             line-height: 1.69;
             font-style: italic;
           }
