--- a/app/styles/controllers/_search.scss
+++ b/app/styles/controllers/_search.scss
@@ -206,7 +206,7 @@
 
           .remixed-by {
             span.title {
-              width: 60px;
+              width: 63px;
               line-height: 1.69;
               font-style: italic;
             }
@@ -309,7 +309,7 @@
           justify-content: space-between;
           border-top-left-radius: 6px;
           border-top-right-radius: 6px;
-          height: 100px;
+          height: 105px;
           padding-bottom: 2px;
         }
 
